# EGTRAIN

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Info.plist.in  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md  task.md
.github/workflows/: cmake.yml  release.yml
EGTRAIN/: QEGTRAIN.sln  README.md
EGTRAIN/QEGTRAIN/: BlockingTimeDiagram.cpp  Capacity.cpp  Capacity.h  ConsoleWidget.cpp  ConsoleWidget.h  DiagramWindow.cpp  EGTRAIN.cpp  EGTRAIN.h  IOClass.cpp  IOClass.h  Infrastructure.cpp  Infrastructure.h  InputValidation.cpp  InputValidation.h  NumberGenerator.cpp  NumberGenerator.h  Optimisation.cpp  Optimisation.h  Owl.cpp  Owl.hpp  Passengers.cpp  Passengers.h  QEGTRAIN.vcxproj  QEGTRAIN.vcxproj.filters  Rescheduling.cpp  Rescheduling.h  RollingStock.cpp  RollingStock.h  SceneDiagnostic.cpp  SceneDiagnostic.h  SceneExporter.cpp  SceneExporter.h  SceneImporter.cpp  SceneImporter.h  SceneModel.cpp  SceneModel.h  SceneTool.cpp  SceneValidator.cpp  SceneValidator.h  SceneWriter.cpp  (+60 more)
EGTRAIN/QEGTRAIN/Input/: Input_EGTRAIN_Banedanmark
EGTRAIN/QEGTRAIN/app/: DispatchController.cpp  DispatchController.h  EGTRAIN.cpp  EGTRAIN.h  GuiSimulationSnapshot.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
EGTRAIN/QEGTRAIN/diagrams/: BlockingTimeDiagram.cpp  BlockingTimeDiagram.h  DiagramWindow.cpp  DiagramWindow.h  RunResults.cpp  RunResults.h  TimetableTableWindow.cpp  TimetableTableWindow.h  TractionCurve.cpp  TractionCurve.h  TrainFilterButton.cpp  TrainFilterButton.h
EGTRAIN/QEGTRAIN/graphics/: NetworkScene.cpp  NetworkScene.h  NetworkView.cpp  NetworkView.h  VisualPolish.cpp  VisualPolish.h  myQGraphicsScene.cpp  myQGraphicsScene.h  myQGraphicsView.cpp  myQGraphicsView.h
EGTRAIN/QEGTRAIN/io/: IOClass.cpp  IOClass.h  InputValidation.cpp  RailMLParser.cpp  RailMLParser.h  geocoding.cpp  geocoding.h
EGTRAIN/QEGTRAIN/scene/: SceneDiagnostic.cpp  SceneExporter.cpp  SceneExporter.h  SceneImporter.cpp  SceneImporter.h  SceneModel.cpp  SceneModel.h  SceneTool.cpp  SceneValidator.cpp  SceneValidator.h  SceneWriter.cpp  SceneWriter.h  TrackPreview.cpp  TrackPreview.h
EGTRAIN/QEGTRAIN/simulation/: Capacity.cpp  Capacity.h  DispatchDecision.cpp  DispatchDecision.h  Infrastructure.cpp  Infrastructure.h  InitialParameters.cpp  InitialParameters.h  NumberGenerator.cpp  Optimisation.cpp  Optimisation.h  Passengers.cpp  Passengers.h  Rescheduling.cpp  Rescheduling.h  RollingStock.cpp  RollingStock.h  Signalling.cpp  Signalling.h  Simulation.cpp  Simulation.h  SimulationWorker.cpp  SimulationWorker.h  dispDecision.cpp  dispDecision.h  initialParameters.cpp  initialParameters.h
EGTRAIN/QEGTRAIN/tests/: test_blockingtimediagram.cpp  test_consolestream.cpp  test_csvwriter.cpp  test_diagramwindow.cpp  test_guisimulationsnapshot.cpp  test_highlighteffect.cpp  test_inputvalidation.cpp  test_networklegend.cpp  test_networkscene_selection.cpp  test_networkview.cpp  test_qt_resource_images.cpp  test_railmlparser.cpp  test_runresults.cpp  test_scenebuilder.cpp  test_sceneexporter.cpp  test_sceneimporter.cpp  test_scenevalidator.cpp  test_scenewriter.cpp  test_speedformat.cpp  test_stationoverlay.cpp  test_timeformat.cpp  test_timeprogressbar.cpp  test_trackpreview.cpp  test_tractioncurve.cpp  test_trajectory.cpp  test_visualpolish.cpp
EGTRAIN/QEGTRAIN/util/: CsvWriter.cpp  CsvWriter.h  Logger.cpp  Logger.hpp  Owl.cpp  Owl.hpp  SpeedFormat.cpp  TimeFormat.cpp  TrajectoryUtil.cpp  TrajectoryUtil.h  portability.h  timeutil.hpp
EGTRAIN/QEGTRAIN/widgets/: Widget.cpp  (+12 more)
docs/: README.md
docs/architecture/: scene-editor-flow.md  scene-model.md  scene-schema.md  source-layout.md
docs/development/: build-and-test.md  release-testing-checklist.md  writing-style.md
docs/github-issues/: 064-epic-ci-cd-pipeline.md  069-add-cross-platform-release-matrix.md  070-package-windows-release-artifact.md  071-package-macos-release-artifact.md  072-package-linux-release-artifact.md  073-attach-release-artifacts-to-tagged-releases.md  079-refresh-desktop-ui-shell-visual-design.md  080-redesign-train-and-track-rendering.md  091-epic-reorganize-source-tree.md  092-group-sources-into-module-folders.md  093-rename-graphics-classes.md  094-rename-vague-classes.md  095-remove-widget-demo.md  099-epic-single-file-scene-bundle.md  100-define-egscene-bundle-format.md  101-read-scene-from-egscene-bundle.md  102-write-scene-to-egscene-bundle.md  103-open-save-bundles-from-gui.md  104-accept-egscene-bundle-cli.md  105-harden-bundle-loading.md  106-package-case-studies-bundles.md  107-document-opening-scene-bundle.md  108-consolidate-image-assets-resources.md  109-revamp-in-scene-entity-icons.md  110-replace-application-window-icon.md  README.md
docs/guides/: lebanon-case-study.md  netherlands-assignment.md  scenes-and-application.md  v1-scene-properties.md
docs/planning/: 2026-07-13-track-preview-fallback-design.md  2026-07-13-track-preview-fallback-implementation-plan.md  2026-07-19-main-application-ui-revamp-plan.md  2026-07-19-main-application-ux-audit.md  agile-workflow.md  github-issues.md  netherlands-audit.md  roadmap.md
docs/product/: assignment-corridor.md  assignment-workflow.md
docs/ui/: renderer-style-map.md
tools/assignment/: generate_assignment_scene.py
tools/e2e/: assignment_smoke.py  csv_export_smoke.sh  editor_smoke.sh  gui_autostart_smoke.py  headless_smoke.py  incident_smoke.py  lebanon_scene_smoke.sh  legacy_import_smoke.sh  package_contents_smoke.sh  roundtrip_smoke.py  scene_render_smoke.sh  startup_launch_contract.py  test_app_icon_config.py  test_case3_startup_errors.py  test_ci_workflow.py  test_headless_smoke_decode.py  test_input_path_casing.py  test_qt_resources.py  test_scene_tool_diagnostics.py  test_signalling_bounds.py  test_windows_subsystem_config.py  track_preview_smoke.sh  visual_polish_smoke.sh
tools/golden_master/: capture.bat  compare.py  compare_all.py  fixed_seed.seed
tools/memory/: ownership_inventory.py  test_ownership_inventory.py  test_raii_contract.py
(+2991 files in other folders)
